# facepipe

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  download_lfw_kaggle.py  enroll_client.py  list.py  mkdocs.yml  pyproject.toml  realtime.py  requirements.txt
.github/workflows/: ci.yml
demo/: app.py
docs/: api.md  architecture.md  configuration.md  getting-started.md  index.md  security-and-anti-spoofing.md
examples/: quickstart.py
facepipe/: __init__.py
facepipe/api/: app.py  dependencies.py  schemas.py
facepipe/api/routers/: enrollment.py  health.py  identities.py  metrics.py  recognition.py
facepipe/config/: __init__.py  defaults.yaml  settings.py
facepipe/core/: __init__.py  models.py  pipeline.py
facepipe/core/alignment/: __init__.py  face_align.py
facepipe/core/antispoof/: __init__.py  liveness.py
facepipe/core/clustering/: __init__.py  identity_cluster.py
facepipe/core/deepfake/: __init__.py  deepfake_detector.py
facepipe/core/detection/: __init__.py  scrfd_detector.py
facepipe/core/fusion/: __init__.py  decision_engine.py
facepipe/core/learning/: __init__.py  active_learning.py
facepipe/core/quality/: __init__.py  face_quality.py  face_restoration.py
facepipe/core/recognition/: __init__.py  adaface_recognizer.py  ensemble_recognizer.py  template_aggregator.py
facepipe/core/search/: __init__.py  faiss_store.py  openset.py  score_normalizer.py  vector_store.py
facepipe/core/tracking/: __init__.py  byte_tracker.py
facepipe/entrypoints/: __init__.py  cli.py  server.py
facepipe/evaluation/: __init__.py  benchmark.py  failure_analysis.py
facepipe/observability/: __init__.py  logging.py  metrics.py
facepipe/storage/: __init__.py  encrypted_store.py  event_store.py  feature_store.py  identity_manager.py
facepipe/storage/migrations/: __init__.py  migrate_v1_to_v2.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/enroll/: page.tsx
site/: 404.html  index.html  objects.inv
site/api/: index.html
site/architecture/: index.html
site/configuration/: index.html
site/getting-started/: index.html
site/search/: search_index.json
site/security-and-anti-spoofing/: index.html
tests/: test_core.py  test_pipeline.py
